feat: Forced Render to use pure Docker deployment for Monorepo fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,38 +1,38 @@
-# --- STAGE 1: Dependency and Source Copy ---
+# --- STAGE 1: Build the Application and Generate Client ---
 FROM node:20-alpine AS builder
 
-# Set the working directory
-WORKDIR /app/backend
+WORKDIR /app
 
-# Copy package.json files for dependency caching
-COPY package.json /app/
+# Copy ALL project root files needed for dependency installation
+COPY package.json ./
+COPY package-lock.json ./
 COPY backend/package.json ./
+COPY backend/package-lock.json ./
+COPY backend/tsconfig.json ./
 
-# Install only production dependencies (devDeps are heavy and not needed at runtime)
-# We install in the builder stage to ensure package caching is efficient
-RUN npm install --only=production
+# Install dependencies (must be done in the backend context)
+RUN npm install --prefix backend
 
-# Copy application source code
-COPY backend/src ./src
+# Build and generate Prisma client
+COPY backend/prisma ./backend/prisma
+COPY backend/src ./backend/src
+RUN npm run build:ts --prefix backend
+RUN npx prisma generate --schema=backend/prisma/schema.prisma
 
 # --- STAGE 2: Final Production Runtime ---
-# Use a lightweight node image for the final runtime environment
 FROM node:20-alpine AS final
 
-# Set the working directory in the final image
 WORKDIR /app/backend
 
-# Copy only the necessary files and dependencies from the builder stage
-# 1. Production dependencies (node_modules)
+# Copy only runtime essentials from the builder stage and source folders
 COPY --from=builder /app/backend/node_modules ./node_modules
-# 2. Application source code and database migrations/config
-COPY backend/src ./src
-COPY backend/database ./database
+COPY --from=builder /app/backend/dist ./dist
+COPY --from=builder /app/backend/prisma/generated ./prisma/generated
+COPY backend/prisma/migrations ./prisma/migrations # Necessary for migrate deploy
 COPY backend/package.json ./
 
-# Set the port and environment variables
-ENV PORT=3000
+# Set the port
 EXPOSE 3000
 
-# Command to start the application (update this to your actual entry point)
-CMD ["node", "./src/index.js"]
+# FINAL START COMMAND (Run migrations, then start server)
+CMD ["sh", "-c", "npx prisma migrate deploy --schema=prisma/schema.prisma && node dist/index.js"]
