--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,36 +1,32 @@
 # --- STAGE 1: Build the React Application ---
 FROM node:20-alpine AS builder
 
-# Set the working directory for the frontend application
 WORKDIR /app
 
-# Copy package.json files for dependency caching
+# Copy only package files first for dependency caching
 COPY package.json ./
 COPY package-lock.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy all application files (React source, public assets)
+# Now copy rest of app source files
 COPY . .
 
-# Run the production build command (outputs to 'build' folder by default)
 RUN npm run build
 
-# --- STAGE 2: Serve the Static Application with Nginx ---
+# --- STAGE 2: Serve with Nginx ---
 FROM nginx:stable-alpine AS final
 
-# Remove default Nginx config
+# Optional: set working directory explicitly
+WORKDIR /usr/share/nginx/html
+
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copy custom Nginx config for client-side routing
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy the static build output from the builder stage
+# Copy built static files from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Expose the default web port 80
 EXPOSE 80
 
-# Command to run Nginx
 CMD ["nginx", "-g", "daemon off;"]
