--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,24 @@
 {
   "name": "laundry-tracker-api",
   "version": "1.0.0",
-  "description": "Node.js/Express API for the Smart Wardrobe app, using PostgreSQL and Prisma.",
-  "main": "dist/index.js",
+  "description": "Node.js/Express API for the Smart Wardrobe app, using MySQL and Prisma.",
+  "main": "dist/backend/src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "npm run build:ts && node dist/index.js",
+    "start": "node dist/backend/src/index.js",
+    "dev": "npm run build:ts && node dist/backend/src/index.js",
     "build:ts": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run build:ts",
-    "db:init": "npx prisma init --datasource-provider postgresql",
-    "db:migrate:dev": "npx prisma migrate dev",
-    "db:migrate:deploy": "npx prisma migrate deploy"
+    "db:init": "npx prisma init --datasource-provider mysql",
+    "db:migrate:dev": "npx prisma migrate dev --schema=prisma/schema.prisma",
+    "db:migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma",
+    "db:generate": "npx prisma generate"
   },
   "keywords": [
     "express",
     "typescript",
     "prisma",
-    "railway"
+    "mysql"
   ],
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "prisma": "^5.14.0",
