feat: Finalized JWT authentication system and integrated M3 frontend UI

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,13 +4,10 @@ FROM node:20-alpine AS builder
 WORKDIR /usr/src/app
 
 # 1. Copy backend dependency files
-# We copy them from the 'backend/' directory in the repo to 'backend/' in the container
 COPY backend/package.json ./backend/
-# Only copy package-lock if it exists (multi-stage builds make conditional copies tricky, 
-# but we assume you have one in backend/. If not, npm install will generate one.)
 COPY backend/package-lock.json ./backend/
 
-# 2. Install dependencies
+# 2. Install dependencies (Including bcrypt/jsonwebtoken)
 WORKDIR /usr/src/app/backend
 RUN npm install
 
@@ -19,29 +16,19 @@ WORKDIR /usr/src/app
 COPY shared/ ./shared/
 COPY backend/ ./backend/
 
-# 4. Generate Prisma Client
+# 4. Build TypeScript
 WORKDIR /usr/src/app/backend
-RUN npx prisma generate
-
-# 5. Build TypeScript
-# (rootDir is set to "../" in tsconfig, so this compiles backend and shared)
 RUN npm run build:ts
 
 # --- STAGE 2: Production Runner ---
 FROM node:20-alpine AS runner
 
-# Set working directory to backend
 WORKDIR /usr/src/app/backend
 
 # Copy necessary runtime files from builder stage
-# We pull the fully built artifacts from the builder
 COPY --from=builder /usr/src/app/backend/node_modules ./node_modules
 COPY --from=builder /usr/src/app/backend/dist ./dist
-COPY --from=builder /usr/src/app/backend/prisma ./prisma
 COPY --from=builder /usr/src/app/backend/package.json ./
-
-# Note: We REMOVED the 'COPY package.json ./' lines that were causing the error.
-# The backend/package.json copied above is all we need.
 
 # Set environment
 ENV PORT=3000
@@ -49,5 +36,4 @@ ENV NODE_ENV=production
 
 EXPOSE 3000
 
-# Start the app
 CMD ["npm", "start"]
