--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node dist/src/index.js",
     "dev": "npm run build:ts && node dist/src/index.js",
     "build:ts": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run build:ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "express",
@@ -22,11 +21,15 @@
     "@libsql/client": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
   }
