--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Node.js/Express API for the Smart Wardrobe app, using Turso (LibSQL).",
   "main": "dist/src/index.js",
   "scripts": {
-    "start": "node dist/src/index.js",
-    "dev": "npm run build:ts && node dist/src/index.js",
+    "start": "node dist/backend/src/index.js",
+    "dev": "npm run build:ts && node dist/backend/src/index.js",
     "build:ts": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,7 +29,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
   }
