--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # --- STAGE 1: Build (Using Debian Slim for glibc compatibility) ---
-FROM node:20-slim AS builder
+FROM node:20.10.0-slim AS builder
 
 # Set the build context to the container's workspace root
 WORKDIR /usr/src/app
@@ -22,7 +22,10 @@ WORKDIR /usr/src/app/backend
 RUN npm run build:ts
 
 # --- STAGE 2: Production Runner (Using Debian Slim Runtime) ---
-FROM node:20-slim AS runner
+FROM node:20.10.0-slim AS runner
+
+# Create non-root user for security
+RUN useradd -m -u 1000 appuser
 
 # Set working directory to backend
 WORKDIR /usr/src/app/backend
@@ -36,7 +39,17 @@ COPY --from=builder /usr/src/app/backend/package.json ./
 ENV PORT=3000
 ENV NODE_ENV=production
 
+# Change ownership to non-root user
+RUN chown -R appuser:appuser /usr/src/app/backend
+
+# Switch to non-root user
+USER appuser
+
 EXPOSE 3000
+
+# Add health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3000/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
 
 # Start the app
 CMD ["npm", "start"]
